src/objects/Integration_Credential__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom settings for store 3d part credential</description>
    <fields>
        <fullName>ApplicationName__c</fullName>
        <description>Name of the application for example for CRM2 it is originApplication field</description>
        <label>Application Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationUser__c</fullName>
        <description>Name of the User in 3d party system for example for CRM2 it is creationUser field</description>
        <label>Application User</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndPoint__c</fullName>
        <description>EndPoint for integration</description>
        <label>End Point</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <description>Password</description>
        <label>Password</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <description>User Name</description>
        <label>User Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Integration Credential</label>
</CustomObject>